[metadata]
name = gym-arcade
version = 0.1.0
description = An extension of OpenAIs Gymn framework to train and play two player games using reinforcement learners
author = Christian Nickerson
url = https://github.com/christian-nickerson/gym-arcade

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    gymnasium == 0.27.0
    retro == 2.9.0
    black == 22.12.0